fix sidebar scrollbar bug

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $text-light: #ccd0d5;
 $border-color: #ccc;
 
 /* dimensions */
-$sidebar-width: 250px;
+$sidebar-width: 270px;
 
 /* spacing */
 $padding: 30px;
