--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,15 +1,16 @@
 .layout-sidebar {
     width: $sidebar-width;
-    padding: $padding 0;
     height: 100vh;
     background: #0062ab;
     position: fixed;
     z-index: 10;
+    overflow: auto;
 
     .logoMilk {
         display: block;
-        width: 250px;
+        width: $sidebar-width;
         text-align: center;
+        margin-top:$padding
     }
 
     .logoMilk img{
@@ -32,9 +33,6 @@
 
     &-navigation {
         position: relative;
-        height: 100%;
-        overflow-y: auto;
-        -webkit-overflow-scrolling: touch;
 
         a {
             display:block;
